--- a/style.css
+++ b/style.css
@@ -12,6 +12,119 @@ body {
     width: 100%;
 }
 
+nav {
+    position: fixed;
+    background-color: black;
+    width: 100%;
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+    padding: 2vw 6vw;
+    height: 12vh;
+}
+
+.nav-right {
+    display: flex;
+    gap: 2vw;
+    text-transform: uppercase;
+    font-size: 0.9vw;
+    align-items: flex-start;
+    padding: 1vh 0;
+    position: relative;
+    z-index: 99;
+}
+
+.nav-right h4 {
+    margin-bottom: 2.5vw;
+}
+
+.nav-right h5 {
+    margin-bottom: 1vw;
+    opacity: 0;
+}
+
+.nav-right h5 span {
+    font-size: .93vw;
+    text-transform: capitalize;
+    font-weight: 600;
+    display: inline-block;
+}
+
+.nav-bottom {
+    background-color: black;
+    width: 90%;
+    height: 0vh;
+    position: absolute;
+    top: 100%;
+    z-index: 9;
+    border-bottom: 1px solid rgb(185, 185, 185);
+}
+
+
+
+
+/* .nav-bottom {
+    height: 0%;
+    width: 90%;
+    position: absolute;
+    bottom: 0%;
+    border-bottom: 1px solid #dadada;
+    transition: all ease 0.5s;
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+    padding: 2vw 8vw 2vw 12.9vw;
+    padding-top: 3vw;
+}
+
+.sixth {
+    padding-left: 9vw;
+}
+
+.bottom-nav-cont {
+    font-size: 1.1vw;
+    font-weight: 500;
+    margin-top: 1.3vw;
+}
+
+.bottom-nav-cont h5 {
+    margin-bottom: 1vw;
+    overflow: hidden;
+}
+
+.bottom-nav-cont h5 span {
+    display: inline-block;
+    opacity: 0;
+}
+
+nav:hover .nav-bottom {
+    background-color: rgb(0, 0, 0);
+    height: 130%;
+    width: 90%;
+    position: absolute;
+    bottom: -130%;
+    border-bottom: 1px solid #dadada;
+
+} */
+
+nav button {
+    background-color: #0DA34E;
+    display: flex;
+    align-items: center;
+    padding: 1vw 1.5vw;
+    border-radius: 90px;
+    text-transform: uppercase;
+    gap: .5vw;
+    border: none;
+    font-size: 1vw;
+    font-weight: 550;
+}
+
+nav button svg {
+    height: 1.2vw;
+}
+
+
 .page1 {
     height: 100vh;
     width: 100%;
@@ -61,6 +174,9 @@ body {
     border: none;
     padding: 2px;
 }
+
+
+
 
 .page2 {
     height: 100vh;
