--- a/style.css
+++ b/style.css
@@ -1,9 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     color: white;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: "Poppins", sans-serif;
 }
 
 html,
@@ -14,13 +18,14 @@ body {
 
 nav {
     position: fixed;
-    background-color: black;
+    background-color: rgb(0, 0, 0);
     width: 100%;
     display: flex;
     align-items: flex-start;
     justify-content: space-between;
     padding: 2vw 6vw;
     height: 12vh;
+    user-select: none;
 }
 
 .nav-right {
@@ -36,18 +41,34 @@ nav {
 
 .nav-right h4 {
     margin-bottom: 2.5vw;
+    cursor: pointer;
+}
+
+.nav-right h4:hover {
+    opacity: .3;
+    transition: all ease .5s;
+    cursor: pointer;
 }
 
 .nav-right h5 {
     margin-bottom: 1vw;
-    opacity: 0;
+    display: none;
+    overflow: hidden;
+
 }
 
 .nav-right h5 span {
     font-size: .93vw;
     text-transform: capitalize;
-    font-weight: 600;
+    transform: translateY(20px);
+    font-weight: 400;
     display: inline-block;
+    cursor: pointer;
+}
+
+.nav-right h5 span:hover {
+    opacity: .3;
+    transition: all ease .5s;
 }
 
 .nav-bottom {
@@ -63,55 +84,11 @@ nav {
 
 
 
-/* .nav-bottom {
-    height: 0%;
-    width: 90%;
-    position: absolute;
-    bottom: 0%;
-    border-bottom: 1px solid #dadada;
-    transition: all ease 0.5s;
-    display: flex;
-    align-items: flex-start;
-    justify-content: space-between;
-    padding: 2vw 8vw 2vw 12.9vw;
-    padding-top: 3vw;
-}
-
-.sixth {
-    padding-left: 9vw;
-}
-
-.bottom-nav-cont {
-    font-size: 1.1vw;
-    font-weight: 500;
-    margin-top: 1.3vw;
-}
-
-.bottom-nav-cont h5 {
-    margin-bottom: 1vw;
-    overflow: hidden;
-}
-
-.bottom-nav-cont h5 span {
-    display: inline-block;
-    opacity: 0;
-}
-
-nav:hover .nav-bottom {
-    background-color: rgb(0, 0, 0);
-    height: 130%;
-    width: 90%;
-    position: absolute;
-    bottom: -130%;
-    border-bottom: 1px solid #dadada;
-
-} */
-
 nav button {
     background-color: #0DA34E;
     display: flex;
     align-items: center;
-    padding: 1vw 1.5vw;
+    padding: .75vw 1.2vw;
     border-radius: 90px;
     text-transform: uppercase;
     gap: .5vw;
