--- a/style.css
+++ b/style.css
@@ -26,6 +26,7 @@ nav {
     padding: 2vw 6vw;
     height: 12vh;
     user-select: none;
+    z-index: 9999;
 }
 
 .nav-right {
@@ -152,6 +153,60 @@ nav button svg {
     padding: 2px;
 }
 
+.carousel {
+    margin-top: 10vh;
+    position: absolute;
+    bottom: 3%;
+    /* background-color: red; */
+    width: 57%;
+    white-space: nowrap;
+    overflow: hidden;
+    padding: 1.5vw;
+}
+
+.carousel .move {
+    display: inline-block;
+    animation-name: carouselAnimation;
+    animation-duration: 20s;
+    animation-timing-function: linear;
+    animation-iteration-count: infinite;
+}
+
+.carousel .move img {
+    margin: 0 1vw;
+    height: 1.5vw;
+}
+
+@keyframes carouselAnimation {
+    0% {
+        transform: translateX(0%);
+    }
+
+    100% {
+        transform: translateX(-100%);
+    }
+
+}
+
+.blur-left {
+    background: linear-gradient(to left, transparent, black);
+    height: 100%;
+    width: 20%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 2;
+
+}
+
+.blur-right {
+    background: linear-gradient(to right, transparent, black);
+    height: 100%;
+    width: 20%;
+    position: absolute;
+    top: 0;
+    right: 0;
+}
 
 
 
