--- a/style.css
+++ b/style.css
@@ -27,6 +27,7 @@ nav {
     height: 12vh;
     user-select: none;
     z-index: 9999;
+    /* background-color: red; */
 }
 
 .nav-right {
@@ -38,6 +39,7 @@ nav {
     padding: 1vh 0;
     position: relative;
     z-index: 99;
+    /* background-color: yellow; */
 }
 
 .nav-right h4 {
@@ -112,6 +114,7 @@ nav button svg {
     justify-content: center;
     align-items: center;
     user-select: none;
+    /* background-color: #0DA34E; */
 }
 
 .page1 h1 {
@@ -157,7 +160,6 @@ nav button svg {
     margin-top: 10vh;
     position: absolute;
     bottom: 3%;
-    /* background-color: red; */
     width: 57%;
     white-space: nowrap;
     overflow: hidden;
@@ -214,4 +216,59 @@ nav button svg {
     height: 100vh;
     width: 100%;
     background-color: black;
+    position: relative;
+    padding: 2vw 4.25vw 8vw 6vw;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    border-top: 1px solid #333;
+}
+
+.page2 .page2-left {
+    height: 100%;
+    width: 40%;
+    display: flex;
+    align-items: flex-start;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 3vw 0;
+    padding-top: 2vw;
+}
+
+.page2 .page2-left p {
+    font-size: 1vw;
+    width: 38%;
+}
+
+.page2 .page2-left h5 {
+    font-size: 1.2vw;
+    font-weight: 200;
+    width: 82%;
+}
+
+.page2 .page2-right {
+    height: 100%;
+    width: 51.5%;
+}
+
+.right-elem {
+    position: relative;
+    padding-top: 2vw;
+    padding-bottom: 4vw;
+    border-bottom: 1px solid #333;
+}
+
+.right-elem h5 {
+    font-size: 1.4vw;
+    font-weight: 400;
+
+}
+
+.right-elem img {
+    position: absolute;
+    height: 7vw;
+    width: 7vw;
+    object-fit: cover;
+    border-radius: 50%;
+    display: none;
 }
