--- a/style.css
+++ b/style.css
@@ -222,6 +222,8 @@ nav button svg {
     align-items: center;
     justify-content: space-between;
     border-top: 1px solid #333;
+    user-select: none;
+
 }
 
 .page2 .page2-left {
@@ -261,7 +263,6 @@ nav button svg {
 .right-elem h5 {
     font-size: 1.4vw;
     font-weight: 400;
-
 }
 
 .right-elem img {
@@ -270,5 +271,13 @@ nav button svg {
     width: 7vw;
     object-fit: cover;
     border-radius: 50%;
-    display: none;
+    opacity: 0;
+    scale: 0;
+}
+
+
+.page3 {
+    height: 100vh;
+    width: 100%;
+    background-color: black;
 }
