--- a/style.css
+++ b/style.css
@@ -280,4 +280,63 @@ nav button svg {
     height: 100vh;
     width: 100%;
     background-color: black;
+    position: relative;
+    background-image: url("resources/Page 3/cover.webp");
+    background-size: cover;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.pg3-cent {
+    /* background-color: red; */
+    /* text-transform: uppercase; */
+
+}
+
+.pg3-cent .icon {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 10px;
+    cursor: pointer;
+}
+
+.pg3-cent .icon i {
+    background-color: white;
+    color: black;
+    padding: 60px;
+    border-radius: 50%;
+    font-size: 3vw;
+
+}
+
+.pg3-cent h5 {
+    background-color: rgb(216, 216, 216);
+    color: black;
+    text-transform: uppercase;
+    font-size: 1vw;
+    padding: 7px 25px;
+    border-radius: 50px;
+    font-weight: 500;
+    opacity: 0;
+    transition: all ease .5s;
+    transform: translateY(20%);
+    user-select: none;
+    cursor: pointer;
+}
+
+.pg3-cent:hover h5 {
+    opacity: 1;
+    transform: translateY(0%);
+}
+
+.page3 video {
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    object-fit: cover;
+    transform: scaleX(0.7) scaleY(0);
+    border-radius: 40px;
+    opacity: 0;
 }
